commit 8 buton mobile menu fixed
.js files for bootstrap and jquery added. bug buton mobile fixed

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,6 +1,6 @@
 .img-list {
-    width: 150px !important;
-    height: 150px;
+    width: 170px !important;
+    height: 170px;
 }
 
 .title-room {
